# vulnoraiq

./: .dockerignore  .env.docker.example  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  architecture-diagram.md  docker-compose.override.yml  docker-compose.yml  launch-vulnoraiq-webui.bat  launch-vulnoraiq-webui.command  launch-vulnoraiq-webui.py  launch-vulnoraiq-webui.sh  llm-vapt-framework-roadmap.md  package.json  playwright.config.js  playwright.hosted.config.js  pyproject.toml  requirements.txt  vite.config.js
.github/workflows/: ci.yml  python-ci.yml  python-package-publish.yml  release-build.yml  security-supply-chain.yml
agent_testing/: runtime_manifest.py
benchmarks/: benchmark_suite.yaml  run_benchmarks.py
benchmarks/fixtures/: owasp_starter_fixture.yaml
config/: agent_execution_scenarios.yaml  agent_runtime.yaml  agent_runtimes.yaml  agent_templates.yaml  attack_profiles.yaml  default.yaml  policy_exceptions.yaml  release_package.yaml  report_branding.yaml  safety_profiles.yaml  target_contracts.yaml  targets.docker.yaml  targets.test.yaml  targets.yaml  web_users.yaml
core/: evidence_model.py  payload_loader.py  policy_engine.py  real_scan.py  results_engine.py  risk_scoring.py  scanner.py  test_runner.py  types.py
dashboards/: generate_dashboard.py
docker/mock-agent/: Dockerfile  app.py
docs/: AGENTIC_APPLICATIONS_PRODUCTION_READINESS_PLAN.md  AGENT_LAB.md  AI_AGENT_TESTING.md  AI_TESTING_GUIDE_IMPLEMENTATION_PLAN.md  AI_TESTING_GUIDE_INTEGRATION.md  ASSESSMENT_ASSURANCE.md  CLI_GUIDE.md  DEPLOYMENT.md  DOCKER_AI_AGENT_RUNTIME.md  DOCKER_RUNTIME_DEPENDENCIES.md  DOCKER_TESTING.md  IMPLEMENTATION_STATUS.md  INCIDENT_RESPONSE.md  INDEPENDENT_ASSURANCE_REVIEW.md  LLM_MANUAL_TESTING_PROMPT.md  MANUAL_TEST_PLAN.md  MIGRATION.md  MITRE_ATLAS_AI_MATRIX.md  NORA_RUNTIME.md  OWASP_LLM_TOP10_MAPPING_IMPLEMENTATION_PLAN.md  PRODUCTION_ASSESSMENT_READINESS.md  PRODUCTION_HARDENING_BACKLOG.md  PRODUCTION_READINESS_SCORECARD.md  PYPI_PACKAGE.md  README.md  RELEASE_ARTIFACTS.md  RELEASE_CHECKLIST.md  RUN_MODES_DESKTOP_AND_DOCKER_LAB.md  SAFETY_MODEL.md  SUPPLY_CHAIN_PIPELINE.md  TARGET_CONFIGURATION.md  USER_GUIDE.md  WEBUI_AUTH_SESSION_HARDENING.md  WEBUI_BUILD_PIPELINE.md  WEBUI_GUIDE.md  WEBUI_IMPROVEMENT_SERIES_SUMMARY.md  WEBUI_INTERACTION_GAPS_CLOSURE.md  WEBUI_RELEASE_HARDENING.md  WEBUI_SINGLE_USER_MODE.md  WEBUI_TESTING.md  (+3 more)
docs/agentic/: PRODUCTION_READINESS_PLAN.md  README.md
docs/genai/: PRODUCTION_READINESS_PLAN.md  README.md
docs/owasp/: LLM04_DATA_AND_MODEL_POISONING.md  OWASP_TO_MITRE_ATLAS_CROSSWALK.md
docs/owasp-documents/: README.md
docs/ready-to-remove/: AI_TESTING_GUIDE_IMPLEMENTATION_PLAN.md  GENAI_PRODUCTION_READINESS_PLAN.md  OWASP_PRODUCTION_READINESS_PLAN.md  README.md
examples/local_demo_targets/: owasp_fixture_targets.py
integrations/: base.py  contract_validation.py  cve_lookup.py  target_adapters.py
model/: README.md  eval_dataset.jsonl  evaluate.py  extract_pdfs.py  prepare_dataset.py  train.py
model/knowledge/: README.md  a-practical-guide-for-secure-mcp-server-development-v-1-0.md  agentic-ai-mas-threat-modelling-guide-v1-final.md  agentic-ai-threats-and-mitigations-1-1.md  chearsheet-a-practical-guide-for-securely-using-third-party-mcp-servers1-0.md  cheat-sheet-agentic-ai-solution-landscape-q32025-1.md  cheat-sheet-red-teaming-ai-solution-landscape-q226.md  genai-red-teaming-guide-1-0-2-17-25.md  llmall-en-us-final.md  owasp-application-security-verification-standard-5-0-0-en.md  owasp-gen-ai-security-project-agentic-threats-navigator.md  owasp-genai-compass-runbook-1-0.md  owasp-genai-data-security-risks-and-mitigations-2026-v1-0.md  owasp-genai-ir-guide-1-0.md  owasp-genai-security-project-solutions-reference-guide-q2-q325.md  owasp-top-10-for-agentic-applications-2026-12-6-1.md  owasp-top-10-for-llm-coe-guide-v1-0-1.md  owasp-top10-for-agentic-applications-aiuc-1-crosswalk-may26-01.md  samm-core-v1-5-final.md  securing-agentic-applications-guide-1-0.md  state-of-agentic-ai-security-and-governance-v2-01-1.md  (+1 more)
modules/: README.md  production_wrapper.py  registry.py  starter.py
payloads/: ai_testing_guide.yaml  owasp_document_examples.yaml  safe_baseline.yaml
rag_testing/: README.md  corpus_manifest.py
reports/: html_export_package.py  report_diff.py  report_generator.py  sarif_report_generator.py
scripts/: bootstrap_launch.py  build_assurance_bundle.py  build_platform_release_package.py  build_release_package.py  check_docker_runtime.py  desktop_launch.py  docker_smoke_test.py  launch_webui.py  refresh_mitre_atlas.py  run_functional_test.py  run_scan.py  validate_aitg_full_coverage.py  validate_assurance_bundle.py  validate_genai_readiness.py  validate_package_metadata.py  validate_production_testing_readiness.py  validate_target_configs.py  webui_test_server.py
tests/: conftest.py  test_agent_lab_smoke.py  test_agent_runtime.py  test_ai_testing_guide_profiles.py  test_benchmarks.py  test_clean_state_user_guide.py  test_cve_lookup.py  test_docker_only_launchers.py  test_double_click_launchers.py  test_functional_testing_run.py  test_genai_readiness_validation.py  test_high_priority_workstreams.py  test_local_evaluators_and_fixtures.py  test_loopback_docs_cleanup.py  test_mitre_atlas_matrix_docs.py  test_mitre_atlas_matrix_generator.py  test_platform_release_package.py  test_policy_exceptions_and_thresholds.py  test_production_hardening_status.py  test_production_testing_readiness.py  test_release_build_workflow.py  test_release_package.py  test_release_packaging.py  test_sarif_and_html_dashboard.py  test_supply_chain_workflow.py  test_target_contract_validation.py  test_trends.py  test_webui_auth_and_persistence.py  test_webui_auth_production.py  test_webui_running_scan_progress_ui.py  test_webui_server.py  test_webui_single_user_mode.py  test_webui_test_catalog.py
webui/: agent_lab.py  agent_runtime.py  assistant.py  assistant_llm.py  assistant_server.py  assistant_tools.py  auth.py  hosted_server.py  persistent_jobs.py  project_analyzer.py  server.py
(+101 files in other folders)
