[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnoraiq"
version = "0.0.1.2"
description = "VulnoraIQ: early-stage AI-native VAPT and security assessment platform for LLM applications, RAG systems, agents, and orchestration layers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rahul Sharma" }]
dependencies = [
  "PyYAML>=6.0.1",
  "requests>=2.31.0",
  "rich>=13.7.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
vulnoraiq = "scripts.run_scan:main"
vulnoraiq-web = "webui.hosted_server:main"
vulnoraiq-dashboard = "dashboards.generate_dashboard:main"
vulnoraiq-diff = "reports.report_diff:main"
vulnoraiq-package = "scripts.build_release_package:main"
vulnoraiq-benchmark = "benchmarks.run_benchmarks:main"
vulnoraiq-policy-trend = "reports.policy_trends:main"
vulnoraiq-diff-trend = "dashboards.diff_trend_dashboard:main"
vulnoraiq-refresh-atlas = "scripts.refresh_mitre_atlas:main"
vulnoraiq-html-export = "reports.html_export_package:main"
vulnoraiq-validate-package = "scripts.validate_package_metadata:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "integrations*", "modules*", "rag_testing*", "agent_testing*", "reports*", "dashboards*", "scripts*", "benchmarks*", "examples*", "webui*"]

[tool.setuptools.package-data]
webui = ["static/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
