[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnoraiq"
version = "0.2.0"
description = "VulnoraIQ AI security assessment framework for LLM applications, RAG systems, agents, and orchestration layers — production-ready for controlled internal deployment."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Rahul Sharma" }]
keywords = ["ai-security", "llm-security", "owasp", "mitre-atlas", "rag", "agent-security", "security-testing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "PyYAML>=6.0.1",
  "requests>=2.31.0",
  "rich>=13.7.0"
]

[project.urls]
Homepage = "https://github.com/sharRahul/vulnoraiq"
Documentation = "https://github.com/sharRahul/vulnoraiq/tree/main/docs"
Source = "https://github.com/sharRahul/vulnoraiq"
Issues = "https://github.com/sharRahul/vulnoraiq/issues"
Security = "https://github.com/sharRahul/vulnoraiq/security"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "pip-audit>=2.7.0",
  "types-PyYAML>=6.0.12.20240311",
  "types-requests>=2.31.0.20240406"
]
release = [
  "build>=1.2.1",
  "twine>=5.1.0"
]

[project.scripts]
vulnoraiq = "scripts.run_scan:main"
vulnoraiq-web = "webui.hosted_server:main"
vulnoraiq-dashboard = "dashboards.generate_dashboard:main"
vulnoraiq-diff = "reports.report_diff:main"
vulnoraiq-package = "scripts.build_release_package:main"
vulnoraiq-platform-package = "scripts.build_platform_release_package:main"
vulnoraiq-benchmark = "benchmarks.run_benchmarks:main"
vulnoraiq-functional-test = "scripts.run_functional_test:main"
vulnoraiq-production-readiness = "scripts.validate_production_testing_readiness:main"
vulnoraiq-policy-trend = "reports.policy_trends:main"
vulnoraiq-diff-trend = "dashboards.diff_trend_dashboard:main"
vulnoraiq-refresh-atlas = "scripts.refresh_mitre_atlas:main"
vulnoraiq-generate-atlas-matrix = "scripts.generate_mitre_atlas_matrix:main"
vulnoraiq-html-export = "reports.html_export_package:main"
vulnoraiq-validate-package = "scripts.validate_package_metadata:main"
vulnoraiq-validate-owasp-atlas-mappings = "scripts.validate_owasp_atlas_mappings:main"
vulnoraiq-validate-genai-readiness = "scripts.validate_genai_readiness:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "integrations*", "modules*", "rag_testing*", "agent_testing*", "reports*", "dashboards*", "scripts*", "benchmarks*", "examples*", "webui*"]

[tool.setuptools.package-data]
webui = [
    "static/console/*",
    "static/console/assets/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = ["reports/output", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true
exclude = "reports/output|build|dist|docker"
